[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.1.0"
description = "An orchestrator that actually works"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
]

[project.scripts]
anvil = "anvil.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
