[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.1.0"
description = "An orchestrator that actually works"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
    "questionary",
]

[project.scripts]
anvil = "anvil.anvil:main"

[tool.setuptools.packages.find]
where = ["src"]
